# discsync

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yaml
examples/: db_stats.rs  embed_smoke.rs
github/workflows/: test.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
src/: archiver.rs  db.rs  embedder.rs  lib.rs  main.rs  pipeline.rs
src/entity/: channel.rs  guild.rs  message.rs  mod.rs  user.rs
