[package]
name = "sbux"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
twilight-gateway = "0.16.0"
twilight-model = "0.16.0"
twilight-http = "0.16.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
qdrant-client = "1.7"
ort = { version = "1.16", features = ["download-binaries"] }
tokenizers = "0.22.1"
futures-util = "0.3"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
ndarray = "=0.15.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
