[package]
name = "discsync"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.17", features = ["macros", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"] }
